# PLC_Simulator

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEV_GUIDE.md  Fucking_bug_report.txt  GEMINI.md  LICENSE-GPL-3.0.txt  PATCH_NOTES_1.1.0.md  README.md  README_ja.md  README_kr.md  agent.md  build_log.txt  release_build_log.txt  release_verbose.txt  this_is_not_AGENTS.md_yet.md
.PowerShell/: Install-PowerShellRemoting.ps1  InstallPSCorePolicyDefinitions.ps1  RegisterManifest.ps1  RegisterMicrosoftUpdate.ps1  pwsh.deps.json  pwsh.runtimeconfig.json
.PowerShell/Modules/CimCmdlets/: CimCmdlets.psd1
.PowerShell/Modules/Microsoft.PowerShell.Diagnostics/: Diagnostics.format.ps1xml  Event.format.ps1xml  GetEvent.types.ps1xml  Microsoft.PowerShell.Diagnostics.psd1
.PowerShell/Modules/Microsoft.PowerShell.Host/: Microsoft.PowerShell.Host.psd1
.PowerShell/Modules/Microsoft.PowerShell.Management/: Microsoft.PowerShell.Management.psd1
.PowerShell/Modules/Microsoft.PowerShell.Security/: Microsoft.PowerShell.Security.psd1  Security.types.ps1xml
.PowerShell/Modules/Microsoft.PowerShell.Utility/: Microsoft.PowerShell.Utility.psd1
.PowerShell/Modules/Microsoft.WSMan.Management/: Microsoft.WSMan.Management.psd1  WSMan.format.ps1xml
.PowerShell/Modules/PSDiagnostics/: PSDiagnostics.psd1  PSDiagnostics.psm1
.claude/: settings.local.json
.copilot/: USER-PLAN-2025-08-13.md  plan.md
docs/: Project_History.md  Project_History_en.md  Project_History_ja.md  실배선 모드.tsx  프로그래밍 모드.tsx
docs/refactoring/: REFACTORING_FINAL_SUMMARY.md
examples/: LADDER_EX_1.csv  LADDER_EX_2.csv  LADDER_EX_3.csv  자동화 설비.json
haptics_bridge/: CMakeLists.txt
haptics_bridge/src/: haptics_bridge.cpp
include/: EventSystem.h  LDToLadderConverter.h  LadderIR.h  LadderToLDConverter.h
include/glad/: glad.h
include/plc_emulator/application_physics/: physics_helpers.h  physics_task_runner.h
include/plc_emulator/components/: box_def.h  button_unit_def.h  component_behavior.h  component_definition.h  component_input_resolver.h  component_registry.h  conveyor_def.h  cylinder_def.h  emergency_stop_def.h  frl_def.h  inductive_sensor_def.h  limit_switch_def.h  manifold_def.h  meter_valve_def.h  plc_def.h  power_supply_def.h  processing_cylinder_def.h  ring_sensor_def.h  rtl_module_def.h  sensor_def.h  state_keys.h  tower_lamp_def.h  valve_double_def.h  valve_single_def.h  workpiece_def.h
legacy/: README.md
legacy/include/: Application.h  CompiledPLCExecutor.h  DataRepository.h  DataTypes.h  IOMapper.h  IOMapping.h  OpenPLCCompilerIntegration.h  PLCSimulatorCore.h  PhysicsEngine.h  PhysicsNetwork.h  PhysicsStates.h  ProgrammingMode.h  ProjectFileManager.h  XMLSerializer.h
legacy/src/: Application.cpp  Application_Components.cpp  Application_Physics.cpp  Application_Ports.cpp  Application_Snap.cpp  Application_Wiring.cpp  CompiledPLCExecutor.cpp  DataRepository.cpp  DataTypes.cpp  EventSystem.cpp  IOMapper.cpp  LDToLadderConverter.cpp  LadderIR.cpp  LadderToLDConverter.cpp  OpenPLCCompilerIntegration.cpp  PLCSimulatorCore.cpp  PhysicsEngine.cpp  PhysicsSolvers.cpp  ProgrammingMode.cpp  ProgrammingMode_Edit.cpp  ProgrammingMode_Sim.cpp  ProgrammingMode_UI.cpp  ProjectFileManager.cpp  XMLSerializer.cpp
release_package/: imgui.ini
resources/lang/: en.lang  ja.lang  ko.lang
resources/themes/: rtl_editor_theme.xml
scripts/: format_all.bat  format_all.sh  run_tests.bat  run_tests.sh
src/: Application.cpp  Application_Components.cpp  Application_Physics.cpp  Application_Ports.cpp  Application_Snap.cpp  Application_Wiring.cpp  CompiledPLCExecutor.cpp  DataRepository.cpp  DataTypes.cpp  EventSystem.cpp  IOMapper.cpp  LDToLadderConverter.cpp  LadderIR.cpp  LadderToLDConverter.cpp  OpenPLCCompilerIntegration.cpp  PLCSimulatorCore.cpp  PhysicsEngine.cpp  PhysicsSolvers.cpp  ProgrammingMode.cpp  ProgrammingMode_Edit.cpp  ProgrammingMode_Sim.cpp  ProgrammingMode_UI.cpp  ProjectFileManager.cpp  XMLSerializer.cpp  main.cpp
src/application/: app_debug.cpp  app_input.cpp  app_layout.cpp  app_lifecycle.cpp  app_lod.cpp  app_project.cpp  app_render.cpp  app_rtl.cpp
src/application_physics/: physics_actuators.cpp  physics_box2d.cpp  physics_electrical.cpp  physics_plc.cpp  physics_pneumatic.cpp  physics_ports.cpp  physics_stats.cpp  physics_sync.cpp  physics_task_runner.cpp  physics_update.cpp  physics_workpiece.cpp
src/components/: box_def.cpp  button_unit_def.cpp  component_behavior.cpp  component_registry.cpp  conveyor_def.cpp  cylinder_def.cpp  emergency_stop_def.cpp  frl_def.cpp  inductive_sensor_def.cpp  limit_switch_def.cpp  manifold_def.cpp  meter_valve_def.cpp  plc_def.cpp  power_supply_def.cpp  processing_cylinder_def.cpp  ring_sensor_def.cpp  rtl_module_def.cpp  sensor_def.cpp  tower_lamp_def.cpp  valve_double_def.cpp  valve_single_def.cpp  workpiece_def.cpp
src/core/: application.cpp  component_manager.cpp  data_types.cpp  input_handler.cpp  plc_simulator_core.cpp  render_manager.cpp  ui_settings.cpp  win32_haptics_stub.cpp  win32_input.cpp  window_manager.cpp  windows_power_utils.cpp
src/data/: data_repository.cpp  event_system.cpp  memory_manager.cpp
src/input/: platform_input_collector.cpp  ui_capture_registry.cpp
src/io/: io_mapper.cpp
src/lang/: lang_manager.cpp
src/physics/: application_physics.cpp  component_physics_adapter.cpp  physics_engine.cpp  physics_solvers.cpp
src/programming/: compiled_plc_executor.cpp  programming_mode.cpp  programming_mode_edit.cpp  programming_mode_sim.cpp  programming_mode_ui.cpp
src/project/: ladder_ir.cpp  ladder_to_ld_converter.cpp  ld_to_ladder_converter.cpp  openplc_compiler_integration.cpp  project_file_manager.cpp  xml_serializer.cpp
src/rtl/: rtl_project_manager.cpp  rtl_runtime_manager.cpp
src/wiring/: application_components.cpp  application_ports.cpp  application_snap.cpp  application_wiring.cpp
tests/: CMakeLists.txt  README.md  test_main.cc
tests/integration/: test_wiring_integration.cc
tests/unit/: test_component_manager.cc  test_data_types.cc
tools/: Delete_setup.ps1  setup_tools.ps1  verify_setup.ps1
(+38 files in other folders)
